bugfix: removed welcome section picture because it was taking too long to render. It will be added again in the future

--- a/src/app/components/WelcomePageSection/WelcomePageSection.module.css
+++ b/src/app/components/WelcomePageSection/WelcomePageSection.module.css
@@ -6,10 +6,11 @@
 
 .infoContainer {
   display: flex;
-  margin-top: 6.25rem;
-  padding-top: 4.688rem;
+  /* margin-top: 6.25rem;
+  padding-top: 4.688rem; */
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   gap: 1.875rem;
 }
 
@@ -51,7 +52,7 @@
 @media (min-width: 56.25rem) {
   .infoContainer {
     margin-top: 0rem;
-    padding-top: 13rem;
+    /* padding-top: 13rem; */
   }
 
   .pictureWrap {
